# GPT2-model-intgration-in-website

./: AUTO_REPAIR_PROMPT.md  CHAT_ASSISTANT_IMPLEMENTATION.md  COMPLETE_SETUP.md  CORRECTED_FLASK_ROUTE.py  FINAL_FIX_SUMMARY.md  FIXED_ENDPOINT_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_SETUP.md  README.md  RUNNING_INSTRUCTIONS.md  SERVER_README.md  SETUP_SUMMARY.md  SHORT_ANSWER_IMPLEMENTATION.md  TASK_COMPLETION_SUMMARY.md  client.py  conftest.py  final_test.py  shrek_GPT.ipynb  simple_chat.html  simple_server.py  test_api.py  test_api_final.py  test_backend.py  test_chat_assistant.py  test_fixed_endpoint.py  test_generate_response.py  test_generator.py  test_inference.py  test_model.py  test_preview.py  test_running_server.py  test_short_answers.py  test_windows.py  tests_passed_log.txt  verify_model.py  verify_model_responses.py  verify_setup.py
gpt2_hypercube_phase1/gpt2-hypercube-phase1/: README.md  conftest.py  pyproject.toml  requirements.txt  run_tests.bat  test_imports.py
gpt2_hypercube_phase1/gpt2-hypercube-phase1/.devcontainer/: Dockerfile  devcontainer.json
gpt2_hypercube_phase1/gpt2-hypercube-phase1/configs/: phase1.yaml
gpt2_hypercube_phase1/gpt2-hypercube-phase1/distill_checkpoints/: audit.logl  epoch_0_definitions_paraphrase_prod.pt  pre_distill.pt
gpt2_hypercube_phase1/gpt2-hypercube-phase1/notebooks/: data_curation.ipynb  phase1_experiments.ipynb
gpt2_hypercube_phase1/gpt2-hypercube-phase1/scripts/: build_quantized.sh  run_tests.sh
gpt2_hypercube_phase1/gpt2-hypercube-phase1/tests/: conftest.py  test_distillation.py  (+5 more)
(+48 files in other folders)
